# neo-mpc-rs

./: .gitignore  Cargo.toml  README-CN.md  README.md
.github/workflows/: rust.yml
examples/: and.rs  main.rs  mimc.rs  range.rs
src/: circuit.rs  evaluate.rs  lib.rs  mpc.rs
src/circuit/: mimc.rs  range.rs
src/crypto/: blake2s.rs  mimc.rs  mod.rs  sha256.rs
src/crypto/ecc/: constants.rs  ecc.rs  mod.rs
src/functions/: and.rs  mod.rs  sha256.rs
src/helpers/: lookup.rs  mod.rs  multieq.rs  multipack.rs  range.rs
src/mpc/: keypair.rs  mod.rs  mpc.rs  parameters.rs  work.rs
src/parameters/test/: phase1radix2m10  phase1radix2m3  phase1radix2m4  phase1radix2m5
src/types/: bit.rs  boolean.rs  bytes4.rs  mod.rs  num.rs  uint32.rs
