[package]
name = "phase2"
version = "0.2.2"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Library for performing MPCs for creating zk-SNARK public parameters"
documentation = "https://docs.rs/phase2"
homepage = "https://github.com/ebfull/phase2"
license = "MIT/Apache-2.0"
repository = "https://github.com/ebfull/phase2"
edition = "2018"

[dependencies]
pairing = "0.22"
bellman = "0.13.1"
byteorder = "1"
num_cpus = "1"
crossbeam = "0.3"
blake2-rfc = "0.2"
bls12_381 = "0.7.0"
ff = "0.12.1"
group = "0.12.1"
rand_core = "0.6.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
blake2s_simd = "1"
jubjub = "0.9"

[dev-dependencies]
criterion = "0.3"
hex-literal = "0.3"
rand_xorshift = "0.3"
sha2 = "0.10"
lazy_static = "1"